Update index.html in test1 branch

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Acts!</title>
+    <title>Welcome to DAI!</title>
     <style>
         /* Reset Styles */
         * {
@@ -87,7 +87,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Acts!!</h1>
+        <h1>Welcome to DAI!!</h1>
         <p>Your journey to excellence begins here.</p>
     </header>
 
