--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <header>
         <h1>Welcome to DAI!!</h1>
         <p>Your journey to excellence begins here.</p>
+<p>Year 2025 is Here!!!</p>
     </header>
 
     <div class="btn-container">
