--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <header>
         <h1>Welcome to Acts!!</h1>
         <p>Your journey to excellence begins here.</p>
+	<p> Your Happy Life also ends Here.</p>
     </header>
 
     <div class="btn-container">
